# melatonin

./: .gitignore  README.md  benchmark.py  detector.py  pyproject.toml
melatonin/: detector.py  microphones.py  parameters.py  pra.py  signals.py  sources.py
melatonin/detectors/: base.py  heraklion.py  pra.py
notebooks/: generate-exhaust-noises.ipynb  using-acoular.ipynb  using_detector_api.ipynb  using_pyroomacoustics.ipynb
